[gd_scene load_steps=5 format=2]

[ext_resource path="res://armies/army_base.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Army" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="SelectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectionArea"]
shape = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 37.8323
margin_top = -29.5916
margin_right = 77.8323
margin_bottom = 10.4084
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodLabel" type="Label" parent="VBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0

[node name="PopLabel" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 32.0

[node name="StarveLabel" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 36.0
margin_right = 64.0
margin_bottom = 50.0
text = "STARVING"
